# 497S-Team-G

./: .gitignore  LICENSE.md  README.md  docker-compose.yml  run_services.sh
Database_Service/: README.md  pyproject.toml  stack.yml
Event_Bus/: Dockerfile  Dockerfile_dev  README.md  main.py  pyproject.toml
POSTS_SERVICE_API/: .gitignore  Dockerfile  Dockerfile_dev  README.md  main.py  pyproject.toml
Query_Service/: Dockerfile  Dockerfile_dev  README.md  main.py  pyproject.toml
Request_Info_API/: Dockerfile  README.md  main.py  pyproject.toml
SIGNUP_LOGIN/: .pdm.toml  Dockerfile  Dockerfile_dev  README.md  main.py  pyproject.toml
View_Posts_Service/: Dockerfile  Dockerfile_dev  README.md  main.py  pyproject.toml
