[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Aditya Narayanan", email = "arnarayanan@umass.edu"},
]
dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
docker_pull_db = "docker pull mongo"
docker_run_db = "docker run --name mongo-service -d mongo"
docker_compose_db = "docker-compose -f stack.yml up"
docker_stop = "docker stop mongo"