[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Janvi Tanniru", email = "jtanniru@umass.edu"},
]
dependencies = [
    "uvicorn~=0.15",
    "fastapi~=0.70",
    "requests~=2.26",
    "httpx~=0.20",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
start_server = "uvicorn main:app --host 0.0.0.0 --port 5005 --reload"
docker_build = "docker build -t event_bus_service ."
docker_build_dev = "docker build -t event_bus_service_dev -f Dockerfile_dev ."
docker_run = "docker run -d --rm --name my_event_bus_service -p 5005:5005 event_bus_service"
docker_run_dev = "./bin/run_dev.sh"
docker_stop = "docker stop event_bus_service"
docker_stop_dev = "docker stop my_event_bus_service"