[project]
name = "POSTS_SERVICE_API"
version = ""
description = "Microservice for creating posts"
authors = [
    {name = "Janvi Tanniru", email = "jtanniru@umass.edu"},
]
dependencies = [
    "requests~=2.26",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
start_server = "uvicorn main:app --host 0.0.0.0 --port 5000 --reload"
docker_build = "docker build -t posts_server ."
docker_build_dev = "docker build -t posts_server_dev -f Dockerfile_dev ."
docker_run = "docker run -d --rm --name my_posts_server -p 5000:5000 posts_server"
docker_run_dev = "./bin/run_dev.sh"
docker_stop = "docker stop my_posts_server"
docker_stop_dev = "docker stop my_posts_server_dev"