[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Aditya Narayanan", email = "arnarayanan@umass.edu"},
]
dependencies = [
    "uvicorn~=0.15",
    "fastapi~=0.70",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
start_server = "uvicorn main:app --host 0.0.0.0 --port 5000 --reload"
docker_build = "docker build -t query_service ."
docker_build_dev = "docker build -t query_service_dev -f Dockerfile_dev ."
docker_run = "docker run -d --rm --name my_query_service -p 5000:5000 query_service"
docker_run_dev = "./bin/run_dev.sh"
docker_stop = "docker stop query_service"
docker_stop_dev = "docker stop query_service_dev"