[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Aditya Narayanan", email = "arnarayanan@umass.edu"},
]
dependencies = [
    "fastapi~=0.70",
    "uvicorn~=0.15",
    "requests~=2.26",
    "pymongo~=3.12",
    "motor~=2.5",
    "bson~=0.5",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
start_server = "uvicorn main:app --host 0.0.0.0 --port 5003 --reload"
docker_build = "docker build -t query_service ."
docker_build_dev = "docker build -t query_service_dev -f Dockerfile_dev ."
docker_run = "docker run -d --rm --name my_query_service -p 5003:5003 query_service"
docker_run_dev = "./bin/run_dev.sh"
docker_stop = "docker stop my_query_service"
docker_stop_dev = "docker stop my_query_service_dev"