[project]
name = "request_info_api"
version = ""
description = "Request Info API Server"
authors = [
    {name = "Harshal Dhelia", email = "hdhelia@umass.edu"},
]
dependencies = [
    "fastapi~=0.70",
    "uvicorn~=0.15",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
start_server = "uvicorn main:app --host 0.0.0.0 --port 5001 --reload"
docker_build = "docker build -t request_info_server ."
docker_run = "docker run -d --rm --name request_info_server_container -p 5001:5001 request_info_server"
docker_stop = "docker stop request_info_server_container"